Fixed issue with logo not having colour behind it.

--- a/styles/min-width-1000px/base.scss
+++ b/styles/min-width-1000px/base.scss
@@ -33,14 +33,15 @@ body > aside#sidebar
 #logo
 {
 	left: 0px;
-	width: 390px;
-	height: 53px;
+	width: 413px;
+	max-height: 53px;
 	margin: 0px;
-	padding: 10px;
 	display: block;
 	position: fixed;
+	padding: 10px 0;
 	top: 0px;
 	z-index: 11000;
+	background-color: #0072CE;
 }
 aside#sidebar div.search
 {
