--- a/styles/themes/dark.scss
+++ b/styles/themes/dark.scss
@@ -18,6 +18,7 @@ body.theme-dark
 			background-color: $background-color;
 		}
 	}
+	#logo { background-color: $background-color; }
 	form.search button
 	{
 		background-color: #0072CE;
